@@ -11,6 +11,7 @@
 #include "ace/Connector.h"
 #include "ace/Get_Opt.h"
 #include "ace/Signal.h"
+#include "ace/OS_NS_unistd.h"
 
 #include "transceiver.h"
 
