@@ -16,8 +16,11 @@
 #include "Event_Analyzer.h"
 #include "Supplier_Router.h"
 #include "ace/Signal.h"
+#include "ace/OS_NS_unistd.h"
 
-ACE_RCSID(UPIPE_Event_Server, event_server, "$Id$")
+ACE_RCSID (UPIPE_Event_Server,
+           event_server,
+           "$Id$")
 
 #if defined (ACE_HAS_THREADS)
 
@@ -35,14 +38,14 @@ public:
 
 Quit_Handler::Quit_Handler (void)
   : ACE_Sig_Adapter (ACE_Sig_Handler_Ex (ACE_Reactor::end_event_loop))
-{  
+{
   // Register to trap input from the user.
   if (ACE_Event_Handler::register_stdin_handler (this,
 						 ACE_Reactor::instance (),
 						 ACE_Thread_Manager::instance ()) == -1)
     ACE_ERROR ((LM_ERROR, "%p\n", "register_stdin_handler"));
   // Register to trap the SIGINT signal.
-  else if (ACE_Reactor::instance ()->register_handler 
+  else if (ACE_Reactor::instance ()->register_handler
 	   (SIGINT, this) == -1)
     ACE_ERROR ((LM_ERROR, "%p\n", "register_handler"));
 }
@@ -87,19 +90,19 @@ consumer (void *)
 
   par1= (time_t) currsec;
 
-  while (done == 0 
+  while (done == 0
 	 && (c_stream.recv (mb_p) != -1))
-    if (mb_p->length () > 1) 
+    if (mb_p->length () > 1)
       {
 	cnt++;
 	if (verb)
-	  cout << " consumer received message !!!!!! " 
+	  cout << " consumer received message !!!!!! "
 	       << mb_p->rd_ptr () << endl;
       }
     else
       {
 	if (verb)
-	  cout << "consumer got last mb" 
+	  cout << "consumer got last mb"
 	       << (char) * (mb_p->rd_ptr ()) << endl;
 	c_stream.close ();
 	done = 1;
@@ -113,7 +116,7 @@ consumer (void *)
     if (secs <= 0)
       secs=1;
 
-    cout << "consumer got " << cnt << " messages of size " << msiz 
+    cout << "consumer got " << cnt << " messages of size " << msiz
 	 << "within " << secs << " seconds" << endl;
 
     ACE_OS::sleep (2);
@@ -188,7 +191,7 @@ int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
   ACE_Service_Config daemon;
-  
+
   options.parse_args (argc, argv);
   options.start_timer ();
 
@@ -214,7 +217,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
   if (event_server.push (sr) == -1)
     ACE_ERROR_RETURN ((LM_ERROR, ACE_TEXT ("%p\n"),
                        ACE_TEXT ("push (Supplier_Router)")), -1);
-					
+
   if (event_server.push (ea) == -1)
     ACE_ERROR_RETURN ((LM_ERROR, ACE_TEXT ("%p\n"),
                        ACE_TEXT ("push (Event_Analyzer)")), -1);
@@ -245,7 +248,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
   else if (ACE_Thread_Manager::instance ()->spawn (ACE_THR_FUNC (supplier), (void *) "hello",
 						  THR_NEW_LWP | THR_DETACHED) == -1)
     ACE_ERROR_RETURN ((LM_ERROR, ACE_TEXT ("%p\n"), ACE_TEXT ("spawn")), 1);
- 
+
   // Perform the main event loop waiting for the user to type ^C or to
   // enter a line on the ACE_STDIN.
 
@@ -256,7 +259,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
   return 0;
 }
 #else
-int 
+int
 ACE_TMAIN (int, ACE_TCHAR *[])
 {
   ACE_ERROR_RETURN ((LM_ERROR,
